# yumi-rubik-cube-solver

./: .gitignore  README.md  calibration.yaml  config.yaml  cube.py  hsv_patch_scatter.py  lab_patch_scatter.py  locate_cube.py  requirements.txt  riconoscimento_cubo.py  robot_config.yaml  shot_cube.py  utils.py  yumi_scene.ttt
color-detect/: README.md
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: Controller.cpp
yumi_ws/: .dockerignore
yumi_ws/src/scene_coppelia/: yumi_scene.ttt  yumi_scene_doubleSensor.ttt  yumi_scene_simple_cube.ttt
yumi_ws/src/yumi_cube/: CMakeLists.txt  package.xml  yumi_cube_trajectory_presentation.tex
yumi_ws/src/yumi_cube/config/: parameters.yaml
yumi_ws/src/yumi_cube/include/yumi_cube/: primitives.hpp
yumi_ws/src/yumi_cube/launch/: yumi_cube.launch.py
yumi_ws/src/yumi_cube/scan_images/: scan_00_phase_0_right_start.ppm  scan_01_phase_1_right_after_joint7_pi.ppm  scan_02_phase_3_right_after_manual_joint_config.ppm  scan_03_phase_6_left_after_yaw_pi_2.ppm  scan_04_phase_7_left_after_yaw_minus_pi.ppm  scan_05_phase_8_left_after_scan_joint_config.ppm
yumi_ws/src/yumi_cube/scripts/: locate_cube_LINUX.py
yumi_ws/src/yumi_cube/src/: main.cpp  primitives.cpp  sequence.cpp
